editing html files for compiled js

--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
       <div id="tasks-list" class="tasks-list"></div>
       
     </main>
-    <script src="script.js"></script>
+    <script type="module"  src="dist/script.js"></script>
   </body>
 </html>
