--- a/add-task.html
+++ b/add-task.html
@@ -66,6 +66,6 @@
         </div>
       </form>
     </div>
-    <script src="add-task.js"></script>
+    <script type="module" src="dist/add-task.js"></script>
   </body>
 </html>
